--- a/master/technofutur-formation/labo/application/views/admin/artist/list.phtml
+++ b/master/technofutur-formation/labo/application/views/admin/artist/list.phtml
@@ -44,7 +44,7 @@
 		echo '<td class="hidden-phone hidden-tablet">' . $artist['website'] . '</td>';
 		echo '<td class="hidden-phone hidden-tablet">' . $artist['image'] . '</td>';
 		echo '<td class="hidden-phone hidden-tablet">' . $artist['nationality'] . '</td>';
-		echo '<td><a class="btn btn-primary" href="/' . $language . '/admin/album?id=' . $artist['id'] . '">' . $lang['add_album'] . '</a><br>&nbsp;<br><a class="btn btn-primary" href="/' . $language . '/admin/artist/profile?id=' . $artist['id'] . '">' . $lang['view_profile'] . '</a></td>';
+		echo '<td><a class="btn btn-primary m1" href="/' . $language . '/admin/album?id=' . $artist['id'] . '">' . $lang['add_album'] . '</a><br>&nbsp;<br><a class="btn btn-primary m1" href="/' . $language . '/admin/artist/profile?id=' . $artist['id'] . '">' . $lang['view_profile'] . '</a></td>';
 
 		echo '</tr>';
 	}
