--- a/master/technofutur-formation/Java (advanced)/labo Java/laboClient/WebContent/css/main.css
+++ b/master/technofutur-formation/Java (advanced)/labo Java/laboClient/WebContent/css/main.css
@@ -933,6 +933,23 @@ button, input[type="button"]{
 .txt80{font-size: 80%}
 .txt70{font-size: 70%}
 
+.alert {
+	padding: 8px 35px 8px 14px;
+	margin-bottom: 20px;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	background-color: #fcf8e3;
+	border: 1px solid #fbeed5;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.error {
+	color: #b94a48;
+	background-color: #f2dede;
+	border-color: #eed3d7;
+}
+
 @media all and (min-width: 1920px){
 
 	.visible-tablet{display: none}
@@ -1220,6 +1237,90 @@ body {
 	font-size: 15px;
 	line-height: 20px;
 	color: #000
+}
+
+#header {
+	width: 100%;
+	position: absolute;
+	background: #b9c9fe;
+	top: 0;
+	color: #fff;
+}
+
+#section {
+	margin: 180px 0;
+}
+
+.table  {
+	width: 100%;
+	margin-top: 20px;
+	border: 1px solid #cbcbcb
+}
+.table > thead > tr {
+	background: #b9c9fe
+}
+
+.table > thead > tr > .category {
+	width: 60%
+}
+
+textarea {
+	width: 100%;
+	min-height: 330px
+}
+.table > thead > tr > .right {
+	text-align: right
+}
+
+td {
+	vertical-align: top
+}
+
+tr, .login, .register {
+	background: #e8edff;
+	border-top: 1px solid #fff
+}
+
+.table > thead > tr > .counter {
+	width: 25%
+}
+
+.separator {
+	border-top: 1px solid #cbcbcb
+}
+
+p {
+	font-size: 18px;
+	padding: 25px 0;
+}
+
+#footer {
+	width: 100%;
+	position: fixed;
+	background: #b9c9fe;
+	bottom: 0;
+	color: #fff;
+}
+
+.form fieldset {
+	margin: 0;
+	padding: .35em 0 .75em;
+	border: 0;
+}
+.form-aligned .control-group label {
+	text-align: right;
+	display: inline-block;
+	vertical-align: middle;
+	width: 10em;
+	margin: 0 1em 0 0;
+}
+
+.form input {
+	margin: 8px
+}
+
+.login, .register {
+	border: 1px solid #dedede
 }
   
   
