--- a/master/technofutur-formation/Java (advanced)/labo Java/laboEAR/.settings/org.eclipse.wst.common.component
+++ b/master/technofutur-formation/Java (advanced)/labo Java/laboEAR/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="laboClientEAR">
+    <wb-module deploy-name="laboEAR">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
         <dependent-module archiveName="laboClient.war" deploy-path="/" handle="module:/resource/laboClient/laboClient">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="labo.jar" deploy-path="/" handle="module:/resource/labo/labo">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
